--- a/source/project.config.json
+++ b/source/project.config.json
@@ -1,145 +1,155 @@
 {
-    "description": "项目配置文件",
-    "packOptions": {
-        "ignore": []
+  "description": "项目配置文件，详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
+  "packOptions": {
+    "ignore": [],
+    "include": []
+  },
+  "setting": {
+    "urlCheck": true,
+    "scopeDataCheck": false,
+    "coverView": true,
+    "es6": false,
+    "postcss": true,
+    "compileHotReLoad": false,
+    "lazyloadPlaceholderEnable": false,
+    "preloadBackgroundData": false,
+    "minified": true,
+    "autoAudits": false,
+    "newFeature": false,
+    "uglifyFileName": false,
+    "uploadWithSourceMap": true,
+    "useIsolateContext": false,
+    "nodeModules": false,
+    "enhance": true,
+    "useMultiFrameRuntime": true,
+    "useApiHook": true,
+    "useApiHostProcess": true,
+    "showShadowRootInWxmlPanel": true,
+    "packNpmManually": false,
+    "packNpmRelationList": [],
+    "minifyWXSS": true,
+    "disableUseStrict": false,
+    "ignoreUploadUnusedFiles": true,
+    "minifyWXML": true,
+    "useStaticServer": true,
+    "showES6CompileOption": false,
+    "checkInvalidKey": true,
+    "babelSetting": {
+      "ignore": [],
+      "disablePlugins": [],
+      "outputPath": ""
     },
-    "setting": {
-        "urlCheck": true,
-        "scopeDataCheck": false,
-        "coverView": true,
-        "es6": false,
-        "postcss": true,
-        "compileHotReLoad": false,
-        "lazyloadPlaceholderEnable": false,
-        "preloadBackgroundData": false,
-        "minified": true,
-        "autoAudits": false,
-        "newFeature": false,
-        "uglifyFileName": false,
-        "uploadWithSourceMap": true,
-        "useIsolateContext": false,
-        "nodeModules": false,
-        "enhance": true,
-        "useMultiFrameRuntime": true,
-        "useApiHook": true,
-        "useApiHostProcess": true,
-        "showShadowRootInWxmlPanel": true,
-        "packNpmManually": false,
-        "packNpmRelationList": [],
-        "minifyWXSS": true,
-        "disableUseStrict": false,
-        "ignoreUploadUnusedFiles": true,
-        "minifyWXML": true
+    "useCompilerPlugins": false
+  },
+  "compileType": "miniprogram",
+  "libVersion": "2.22.0",
+  "appid": "wx802dd365b55b23a6",
+  "projectname": "%E7%A2%97%E9%87%8C%E5%B0%8F%E9%93%BA",
+  "simulatorType": "wechat",
+  "simulatorPluginLibVersion": {},
+  "condition": {
+    "plugin": {
+      "list": []
     },
-    "compileType": "miniprogram",
-    "libVersion": "2.22.0",
-    "appid": "wx802dd365b55b23a6",
-    "projectname": "%E7%A2%97%E9%87%8C%E5%B0%8F%E9%93%BA",
-    "debugOptions": {
-        "hidedInDevtools": []
+    "game": {
+      "list": []
     },
-    "isGameTourist": false,
-    "simulatorType": "wechat",
-    "simulatorPluginLibVersion": {},
-    "condition": {
-        "plugin": {
-            "list": []
+    "gamePlugin": {
+      "list": []
+    },
+    "miniprogram": {
+      "list": [
+        {
+          "id": -1,
+          "name": "起名",
+          "pathName": "pages/index/index",
+          "query": "",
+          "scene": null
         },
-        "game": {
-            "list": []
+        {
+          "id": -1,
+          "name": "name",
+          "pathName": "pages/name/name",
+          "query": "",
+          "scene": null
         },
-        "gamePlugin": {
-            "list": []
+        {
+          "name": "在线视频",
+          "pathName": "pages/videolist/videolist",
+          "query": "",
+          "scene": null
         },
-        "miniprogram": {
-            "list": [
-                {
-                    "id": -1,
-                    "name": "起名",
-                    "pathName": "pages/index/index",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "id": -1,
-                    "name": "name",
-                    "pathName": "pages/name/name",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "在线视频",
-                    "pathName": "pages/videolist/videolist",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "商城",
-                    "pathName": "pages/mall/mall",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "商品详情",
-                    "pathName": "pages/malldetail/malldetail",
-                    "query": "id=5",
-                    "scene": null
-                },
-                {
-                    "name": "订单确认",
-                    "pathName": "pages/ordersubmit/ordersubmit",
-                    "query": "goodsid=5",
-                    "scene": null
-                },
-                {
-                    "name": "我的",
-                    "pathName": "pages/my/my",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "支付成功",
-                    "pathName": "pages/paysuccess/paysuccess",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "我的地址",
-                    "pathName": "pages/addresslist/addresslist",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "新增地址",
-                    "pathName": "pages/addressinfo/addressinfo",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "门店自提",
-                    "pathName": "pages/store/store",
-                    "query": "goodsid=1&id=0",
-                    "scene": null
-                },
-                {
-                    "name": "订单列表",
-                    "pathName": "pages/orderlist/orderlist",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "订单详情",
-                    "pathName": "pages/orderdetail/orderdetail",
-                    "query": "id=6",
-                    "scene": null
-                },
-                {
-                    "name": "评价",
-                    "pathName": "pages/addpingjia/addpingjia",
-                    "query": "id=6",
-                    "scene": null
-                }
-            ]
+        {
+          "name": "商城",
+          "pathName": "pages/mall/mall",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "商品详情",
+          "pathName": "pages/malldetail/malldetail",
+          "query": "id=5",
+          "scene": null
+        },
+        {
+          "name": "订单确认",
+          "pathName": "pages/ordersubmit/ordersubmit",
+          "query": "goodsid=5",
+          "scene": null
+        },
+        {
+          "name": "我的",
+          "pathName": "pages/my/my",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "支付成功",
+          "pathName": "pages/paysuccess/paysuccess",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "我的地址",
+          "pathName": "pages/addresslist/addresslist",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "新增地址",
+          "pathName": "pages/addressinfo/addressinfo",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "门店自提",
+          "pathName": "pages/store/store",
+          "query": "goodsid=1&id=0",
+          "scene": null
+        },
+        {
+          "name": "订单列表",
+          "pathName": "pages/orderlist/orderlist",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "订单详情",
+          "pathName": "pages/orderdetail/orderdetail",
+          "query": "id=6",
+          "scene": null
+        },
+        {
+          "name": "评价",
+          "pathName": "pages/addpingjia/addpingjia",
+          "query": "id=6",
+          "scene": null
         }
+      ]
     }
+  },
+  "editorSetting": {
+    "tabIndent": "insertSpaces",
+    "tabSize": 2
+  }
 }
