--- a/source/app.json
+++ b/source/app.json
@@ -44,6 +44,7 @@
     "pages/mypingjia/mypingjia",
     "pages/duihuanjilu/duihuanjilu",
     "pages/aboutus/aboutus",
+    "pages/shopcar/shopcar", 
     "pages/feedback/feedback"
 
   ],
