--- a/source/project.private.config.json
+++ b/source/project.private.config.json
@@ -645,6 +645,13 @@
           "query": "",
           "launchMode": "default",
           "scene": null
+        },
+        {
+          "name": "购物车",
+          "pathName": "pages/shopcar/shopcar",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
         }
       ]
     }
