--- a/source/app.json
+++ b/source/app.json
@@ -58,6 +58,9 @@
       "desc": "你的位置信息将用于小程序位置接口的效果展示"
     }
   },
+  "requiredPrivateInfos": [
+		"getLocation"
+	],
   "window": {
     "backgroundTextStyle": "light",
     "enablePullDownRefresh": true,
@@ -90,6 +93,5 @@
       }
     ]
   },
-  
   "sitemapLocation": "sitemap.json"
 }
